--- a/keyword_comparison.ipynb
+++ b/keyword_comparison.ipynb
@@ -247,13 +247,14 @@
    "source": [
     "# getting total counts of keywords from entire data set including all months\n",
     "keyword_count_1 = df.keyword_1.value_counts()[0:500]\n",
-    "keyword_count_2 = df.keyword_2.value_counts()[0:500]\n",
-    "keyword_count_3 = df.keyword_3.value_counts()[0:500]\n",
+    "# keyword_count_2 = df.keyword_2.value_counts()[0:500]\n",
+    "# keyword_count_3 = df.keyword_3.value_counts()[0:500]\n",
     "\n",
-    "# combine total keyword counts into new dataframe and display top 50 results\n",
-    "combined = pd.concat([keyword_count_1,keyword_count_2,keyword_count_3],axis=1).fillna(0)\n",
-    "combined = combined[\"keyword_1\"] + combined[\"keyword_2\"] + combined[\"keyword_3\"]\n",
-    "top_keywords = combined.sort_values(ascending=False)[0:20]"
+    "# # combine total keyword counts into new dataframe and display top 50 results\n",
+    "# combined = pd.concat([keyword_count_1,keyword_count_2,keyword_count_3],axis=1).fillna(0)\n",
+    "# combined = combined[\"keyword_1\"] + combined[\"keyword_2\"] + combined[\"keyword_3\"]\n",
+    "# top_keywords = combined.sort_values(ascending=False)[0:20]\n",
+    "k"
    ]
   },
   {
