--- a/natural_language_processing.ipynb
+++ b/natural_language_processing.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,24 +37,18 @@
     "        base_url = f\"https://api.nytimes.com/svc/archive/v1/{year}/{month}.json?api-key={nyt_key}\"\n",
     "        response = requests.get(base_url).json()[\"response\"][\"docs\"]\n",
     "        for i in response:\n",
-    "            if len(i[\"keywords\"]) >= 3:\n",
-    "                publication_date.append(i[\"pub_date\"])\n",
-    "                document_type.append(i[\"document_type\"])\n",
-    "                headline.append(i[\"headline\"][\"main\"])\n",
-    "                abstract.append(i[\"abstract\"])\n",
-    "                lead_paragraph.append(i[\"lead_paragraph\"])\n",
-    "#                 keyword_1.append(i[\"keywords\"][0][\"value\"])\n",
-    "#                 keyword_2.append(i[\"keywords\"][1][\"value\"])\n",
-    "#                 keyword_3.append(i[\"keywords\"][2][\"value\"])\n",
+    "            publication_date.append(i[\"pub_date\"])\n",
+    "            document_type.append(i[\"document_type\"])\n",
+    "            headline.append(i[\"headline\"][\"main\"])\n",
+    "            abstract.append(i[\"abstract\"])\n",
+    "            lead_paragraph.append(i[\"lead_paragraph\"])\n",
+    "\n",
     "    data = {\n",
     "        \"publication_date\":publication_date,\n",
     "        \"document_type\":document_type,\n",
     "        \"headline\":headline,\n",
     "        \"abstract\":abstract,\n",
     "        \"lead_paragraph\":lead_paragraph,\n",
-    "#         \"keyword_1\":keyword_1,\n",
-    "#         \"keyword_2\":keyword_2,\n",
-    "#         \"keyword_3\":keyword_3,\n",
     "    }\n",
     "    df = pd.DataFrame(data)\n",
     "\n",
@@ -62,7 +56,6 @@
     "    all_headline = df['headline'].str.lower().str.cat(sep=' ')\n",
     "    all_abstract = df['abstract'].str.lower().str.cat(sep=' ')\n",
     "    all_lead_paragraph = df['lead_paragraph'].str.lower().str.cat(sep=' ')\n",
-    "#     all_keywords = df['keyword_1'].str.lower().str.cat(sep=' ') + df['keyword_2'].str.lower().str.cat(sep=' ') + df['keyword_2'].str.lower().str.cat(sep=' ')\n",
     "    all_words = all_headline + all_abstract + all_lead_paragraph\n",
     "    words_count = all_words.split(sep=\" \")\n",
     "    print(f\"Total number of raw words: {len(words_count):,}\")\n",
@@ -95,7 +88,6 @@
     "    sort_freq=sorted(term_freq.items(), key=lambda x: x[1], reverse=True)\n",
     "    top_terms_freq=sort_freq[:]\n",
     "    top_terms_dict={}\n",
-    "\n",
     "    for each_term_freq in top_terms_freq: \n",
     "        if type(each_term_freq[0])==tuple: \n",
     "            top_terms_dict[' '.join(each_term_freq[0])]=each_term_freq[1]\n",
@@ -118,15 +110,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total number of raw words: 2,237,694\n",
-      "Total number of tokenized words after filters applied: 2,548,553\n"
+      "Total number of raw words: 6,126,983\n",
+      "Total number of tokenized words after filters applied: 6,839,837\n"
      ]
     }
    ],
@@ -139,27 +131,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "new           10736\n",
-       "said           5463\n",
-       "one            5353\n",
-       "two            4023\n",
-       "city           3727\n",
+       "new           27846\n",
+       "said          16947\n",
+       "one           14286\n",
+       "york          11345\n",
+       "new york      11293\n",
        "              ...  \n",
-       "abstained         1\n",
-       "dishonored        1\n",
-       "archery           1\n",
-       "blanching         1\n",
-       "phoenicia         1\n",
-       "Length: 650605, dtype: int64"
+       "silkier           1\n",
+       "chitarra          1\n",
+       "gluey             1\n",
+       "fleecing          1\n",
+       "limoncello        1\n",
+       "Length: 1362233, dtype: int64"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,8 +161,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pull data for each year above before running below code"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -203,38 +202,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>coronavirus</th>\n",
-       "      <td>12743.0</td>\n",
+       "      <td>14456.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>new</th>\n",
-       "      <td>9571.0</td>\n",
-       "      <td>13508.0</td>\n",
-       "      <td>17230.0</td>\n",
-       "      <td>10736.0</td>\n",
+       "      <td>10989.0</td>\n",
+       "      <td>17045.0</td>\n",
+       "      <td>24894.0</td>\n",
+       "      <td>27846.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>pandemic</th>\n",
-       "      <td>5874.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>5.0</td>\n",
+       "      <td>6454.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>7.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>trump</th>\n",
-       "      <td>5775.0</td>\n",
-       "      <td>6016.0</td>\n",
-       "      <td>58.0</td>\n",
-       "      <td>30.0</td>\n",
+       "      <td>6062.0</td>\n",
+       "      <td>6727.0</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>132.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>one</th>\n",
-       "      <td>5075.0</td>\n",
-       "      <td>5897.0</td>\n",
-       "      <td>7581.0</td>\n",
-       "      <td>5353.0</td>\n",
+       "      <td>5691.0</td>\n",
+       "      <td>6631.0</td>\n",
+       "      <td>10153.0</td>\n",
+       "      <td>14286.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -244,35 +243,35 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>throb</th>\n",
+       "      <th>kickier</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>gruffly</th>\n",
+       "      <th>rattan</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>capraesque</th>\n",
+       "      <th>ketchupy</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>hooverville</th>\n",
+       "      <th>chitarra</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>abstained</th>\n",
+       "      <th>fleecing</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -280,27 +279,27 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2496524 rows × 4 columns</p>\n",
+       "<p>3435618 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                2020     2016     2012     2008\n",
-       "coronavirus  12743.0      NaN      NaN      NaN\n",
-       "new           9571.0  13508.0  17230.0  10736.0\n",
-       "pandemic      5874.0      6.0      9.0      5.0\n",
-       "trump         5775.0   6016.0     58.0     30.0\n",
-       "one           5075.0   5897.0   7581.0   5353.0\n",
+       "coronavirus  14456.0      NaN      NaN      NaN\n",
+       "new          10989.0  17045.0  24894.0  27846.0\n",
+       "pandemic      6454.0      7.0     11.0      7.0\n",
+       "trump         6062.0   6727.0     92.0    132.0\n",
+       "one           5691.0   6631.0  10153.0  14286.0\n",
        "...              ...      ...      ...      ...\n",
-       "throb            NaN      NaN      NaN      1.0\n",
-       "gruffly          NaN      NaN      NaN      1.0\n",
-       "capraesque       NaN      NaN      NaN      1.0\n",
-       "hooverville      NaN      NaN      NaN      1.0\n",
-       "abstained        NaN      NaN      NaN      1.0\n",
+       "kickier          NaN      NaN      NaN      1.0\n",
+       "rattan           NaN      NaN      NaN      1.0\n",
+       "ketchupy         NaN      NaN      NaN      1.0\n",
+       "chitarra         NaN      NaN      NaN      1.0\n",
+       "fleecing         NaN      NaN      NaN      1.0\n",
        "\n",
-       "[2496524 rows x 4 columns]"
+       "[3435618 rows x 4 columns]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
